# dwarf2cpp

./: .clang-format  .gitignore  CMakeLists.txt  README.md  conanfile.py  conanfile.txt  pyproject.toml
.github/workflows/: build.yml
recipes/llvm-core/: conandata.yml  conanfile.py
scripts/: post_process.py
src/: algorithm.hpp  context.cpp  context.h  entry.cpp  entry.h  main.cpp  posixpath.hpp  source_file.cpp  source_file.h  type_printer.cpp
src/dwarf2cpp/: README.md  __init__.py  _dwarf.cpp  _dwarf.pyi  cli.py  filters.py  models.py  post_process.py  visitor.py
src/dwarf2cpp/templates/: attribute.jinja  enum.jinja  file.jinja  function.jinja  imported_declaration.jinja  imported_module.jinja  namespace_close.jinja  namespace_open.jinja  struct.jinja  template.jinja  typedef.jinja  union.jinja
