[project]
name = "dwarf2cpp"
version = "0.1.0"
description = "Generate C++ headers from DWARF Debugging Information Format"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["lazy_loader"]

[project.scripts]
dwarf2cpp = "dwarf2cpp.cli:main"

[build-system]
requires = ["scikit-build-core-conan"]
build-backend = "scikit_build_core_conan.build"

[[tool.scikit-build-core-conan.overrides]]
if.platform-system = "win32"
settings = ["compiler.cppstd=17", "compiler.version=193"]

[[tool.scikit-build-core-conan.overrides]]
if.platform-system = "linux"
settings = ["compiler.cppstd=17", "compiler.version=11"]

[[tool.scikit-build-core-conan.overrides]]
if.platform-system = "darwin"
settings = ["compiler.cppstd=17", "compiler.version=13"]

[tool.ruff]
line-length = 120
lint.extend-select = ["I"]